--- a/app/design/frontend/creo/default/template/page/html/header.phtml
+++ b/app/design/frontend/creo/default/template/page/html/header.phtml
@@ -47,33 +47,63 @@
 			                </ol>
 			            </nav>
 			        </div>
-			        <div class="col right-area col-lg-6 col-md-6 col-sm-6">
-			            <div class="cart"><a href="#">my cart</a></div>
+			     <div class="col right-area col-lg-6 col-md-6 col-sm-6 col-xs-6">
+			            <div class="open-close cart">
+							<a href="#" class="opener">My Cart</a>
+							<div class="slide js-slide-hidden">
+								<div class="product">
+									<a href="#" class="alignleft"><img alt="" src="images/img02.jpg"></a>
+									<div class="text-area">
+										<h2><a href="#">Velour Blazer With Faux Leather</a></h2>
+										<span class="price">$149.00</span>
+										<a class="cancel" href="#"><i class="icon-cancel"></i></a>
+										<a class="edit" href="#"><i class="icon-edit"></i></a>
+									</div>
+								</div>
+								<div class="product">
+									<a href="#" class="alignleft"><img alt="" src="images/img03.jpg"></a>
+									<div class="text-area">
+										<h2><a href="#">Velour Blazer With Faux Leather</a></h2>
+										<span class="price">$149.00</span>
+										<a class="cancel" href="#"><i class="icon-cancel"></i></a>
+										<a class="edit" href="#"><i class="icon-edit"></i></a>
+									</div>
+								</div>
+								<strong class="total">Total: 149.00 AED</strong>
+								<div class="btn-holder">
+									<a href="#"><span class="span1"><span class="span2">View Cart</span></span></a>
+									<a href="#">Checkout</a>
+								</div>
+							</div>
+						</div>
+
+
+
 			            <div class="bottom-area">
 			                <div class="open-close basic-open-close">
-			                    <a class="opener" href="#">Aed</a>
-			                    <ul class="slide">
+			                    <a href="#" class="opener">Aed</a>
+			                    <ul class="slide js-slide-hidden">
 			                        <li><a href="#">Aed</a></li>
 			                        <li><a href="#">US Doller</a></li>
 			                    </ul>
 			                </div>
 			                <div class="open-close basic-open-close">
-			                    <a class="opener" href="#">Eng</a>
-			                    <ul class="slide">
+			                    <a href="#" class="opener">Eng</a>
+			                    <ul class="slide js-slide-hidden">
 			                        <li><a href="#">English</a></li>
 			                        <li><a href="#">Arabic</a></li>
 			                    </ul>
 			                </div>
 			                <div class="open-close login-area">
-			                    <a class="opener" href="#">Dexter Waspov</a>
-			                    <ul class="slide">
+			                    <a href="#" class="opener">Dexter Waspov</a>
+			                    <ul class="slide js-slide-hidden">
 			                        <li><a href="#">My account</a></li>
 			                        <li><a href="#">Wishlist</a></li>
 			                        <li><a href="#">Checkout</a></li>
 			                        <li><a href="#">Logout</a></li>
 			                    </ul>
 			                </div>
-			                <form action="#" class="search-form">
+			                <form class="search-form" action="#">
 			                    <input type="text" placeholder="">
 			                    <input type="submit" value="submit">
 			                </form>
