--- a/app/design/frontend/creo/default/layout/local.xml
+++ b/app/design/frontend/creo/default/layout/local.xml
@@ -4,6 +4,7 @@
 <default>
 <reference name="head">
  <action method="addCss"><stylesheet>style.css</stylesheet></action> 
+ <action method="addCss"><stylesheet>custom.css</stylesheet></action>
   <action method="addCss"><stylesheet>bootstrap/css/bootstrap.css</stylesheet></action> 
   <action method="setText"><text><![CDATA[<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Roboto+Condensed">]]></text></action>
   <action method="addItem"><type>skin_js</type><script>js/jquery.main.js</script></action>
@@ -13,26 +14,29 @@
 
 
 <cms_index_index>
-		<reference name="head">
-            <action method="addCss"><stylesheet>css/auguria/sliders/default.css</stylesheet></action>
-            <action method="addJs"><script>auguria/sliders/jquery-1.7.2.min.js</script></action>
-            <action method="addItem"><type>skin_js</type><script>js/auguria/sliders/slides.min.jquery_forked.js</script></action>
-        </reference>
-		  
-        <reference name="content">
-            <block type="auguria_sliders/cms_page_slider" name="auguria_sliders" template="auguria/sliders/slider.phtml" before="-"/>
-        </reference>
-		  
-		<reference name="content">
-		<block type="core/template" name="featured_category" template="catalog/category/subcategory.phtml">
-		<action method="setData"><name>category_id</name><value>7</value></action>
-		</block>
-		
-		<block type="core/template" name="category_subcategory" template="catalog/category/subcategory.phtml">
-		<action method="setData"><name>title</name><value>Styles</value></action>
-		<action method="setData"><name>category_id</name><value>12</value></action>
-		</block>
-		</reference>
+	
+	<reference name="head">
+	<action method="addCss"><stylesheet>css/auguria/sliders/default.css</stylesheet></action>
+	<action method="addJs"><script>auguria/sliders/jquery-1.7.2.min.js</script></action>
+	<action method="addItem"><type>skin_js</type><script>js/auguria/sliders/slides.min.jquery_forked.js</script></action>
+	</reference>
+	
+	<reference name="content">
+	<block type="auguria_sliders/cms_page_slider" name="auguria_sliders" template="auguria/sliders/slider.phtml" before="-"/>
+	</reference>
+	
+	<reference name="content">
+	<block type="core/template" name="featured_category" template="catalog/category/subcategory.phtml">
+	<action method="setData"><name>category_title</name><value>featured_category</value></action>
+	<action method="setData"><name>category_id</name><value>7</value></action>
+	</block>
+	
+	<block type="core/template" name="category_subcategory" template="catalog/category/subcategory.phtml">
+	<action method="setData"><name>title</name><value>Styles</value></action>
+	<action method="setData"><name>category_title</name><value>style_category</value></action>
+	<action method="setData"><name>category_id</name><value>12</value></action>
+	</block>
+	</reference>
 		
 </cms_index_index>
 
@@ -40,6 +44,13 @@
   <reference name="root">
     <action method="setTemplate"><template>page/1column.phtml</template></action>
   </reference>
+  
+  <reference name="content">
+    <block type="cms/block" name="footer_contents">
+      <action method="setBlockId"><block_id>footer_contents</block_id></action>
+    </block>
+  </reference>
+  
 </catalog_category_default>
 
 
