--- a/app/design/frontend/creo/default/template/directory/currency.phtml
+++ b/app/design/frontend/creo/default/template/directory/currency.phtml
@@ -32,14 +32,14 @@
  */
 ?>
 <?php if($this->getCurrencyCount()>1): ?>
-<div class="currency-switcher">
-    <label for="select-currency"><?php echo $this->__('Your Currency:') ?></label>
-    <select id="select-currency" name="currency" title="<?php echo $this->__('Your Currency') ?>" onchange="setLocation(this.value)">
-        <?php foreach ($this->getCurrencies() as $_code => $_name): ?>
-        <option value="<?php echo $this->getSwitchCurrencyUrl($_code) ?>"<?php if($_code==$this->getCurrentCurrencyCode()): ?> selected="selected"<?php endif; ?>>
-            <?php echo $_name ?> - <?php echo $_code ?>
-        </option>
-    <?php endforeach; ?>
-    </select>
-</div>
+
+  <div class="open-close basic-open-close "> <a class="opener" href="#">AED</a>
+    <ul class="slide currencies">
+      <?php foreach ($this->getCurrencies() as $_code => $_name): ?>
+      <li> <a href="<?php echo $this->getSwitchCurrencyUrl($_code) ?>" onclick="setLocation(this.value);"> <?php echo $_code ?> </a> </li>
+      <?php endforeach; ?>
+    </ul>
+  </div>
+
 <?php endif; ?>
+ 
