--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -1,3 +1,13 @@
+@font-face {
+  font-family: 'fontello';
+  src: url('fonts/fontello.eot?6880134');
+  src: url('fonts/fontello.eot?6880134#iefix') format('embedded-opentype'),
+       url('fonts/fontello.woff?6880134') format('woff'),
+       url('fonts/fontello.ttf?6880134') format('truetype'),
+       url('fonts/fontello.svg?6880134#fontello') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
 html { box-sizing: border-box; }
 *,
 *:before,
@@ -79,6 +89,28 @@ table {
 	border-spacing: 0;
 }
 p { margin: 0 0 1.2em; }
+[class^="icon-"]:before, [class*=" icon-"]:before {
+  font-family: "fontello";
+  font-style: normal;
+  font-weight: normal;
+  speak: none;
+  display: inline-block;
+  text-decoration: inherit;
+  text-align: center;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1em;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+.icon-facebook:before { content: '\e800'; } /* '' */
+.icon-twitter:before { content: '\e801'; } /* '' */
+.icon-gplus:before { content: '\e802'; } /* '' */
+.icon-linkedin:before { content: '\e803'; } /* '' */
+.icon-rss:before { content: '\e804'; } /* '' */
+.icon-pinterest-circled:before { content: '\e805'; } /* '' */
+.icon-cancel:before { content: '\e806'; } /* '' */
+.icon-edit:before { content: '\e807'; } /* '' */
 .nav li,form li {
 	float: left;
 	list-style: none;
@@ -361,9 +393,9 @@ p.style1 {
 #wrapper > .container{
 	background: #fff;
 	box-shadow: 0 5px 17px rgba(0,0,0,.2);
-	position: relative;
 	margin-top: 46px;
 	margin-bottom: 46px;
+	overflow: hidden;
 }
 #header{
 	margin-bottom: 54px;
@@ -443,6 +475,7 @@ p.style1 {
 	width: 130px;
 	padding: 35px 0 17px;
 	position: relative;
+	z-index: 22;
 }
 #header .cart:before{
 	position: absolute;
@@ -456,7 +489,7 @@ p.style1 {
 	border-color: transparent transparent #fff;
 	content: '';
 }
-#header .cart a{
+#header .cart .opener{
 	font:bold 19px/27px "Roboto Condensed", Helvetica, Arial, sans-serif;
 	color: #222;
 	text-transform: uppercase;
@@ -465,11 +498,11 @@ p.style1 {
 	padding: 19px 0;
 	z-index: 22;
 }
-#header .cart a:hover{
+#header .cart .opener:hover{
 	text-decoration: none;
 	opacity: 0.9;
 }
-#header .cart a:before{
+#header .cart .opener:before{
 	background: url('images/sprite.png') no-repeat 0 0;
 	width: 21px;
 	height: 18px;
@@ -478,7 +511,7 @@ p.style1 {
 	margin: 0 6px 0 0;
 	content: '';
 }
-#header .cart a:after{
+#header .cart .opener:after{
 	background: #fdda00;
 	position: absolute;
 	top: 0;
@@ -491,6 +524,133 @@ p.style1 {
 	-moz-transform: skewY(-8deg);
 	-webkit-transform: skewY(-8deg);
 	-ms-transform: skewY(-8deg);
+}
+#header .cart .slide{
+	background: #fff;
+	position: absolute;
+	right: 0;
+	padding: 60px 0 20px;
+	margin: 20px 0 0;
+	width: 470px;
+	box-shadow: 4px 6px 5px rgba(0,0,0,.23);
+}
+#header .cart .product{
+	padding: 28px 50px 28px 28px;
+	border-bottom: 2px solid #e4e4e4;
+	overflow: hidden;
+	text-align: left;
+}
+#header .cart .alignleft{
+	float: left;
+	width: 120px;
+	margin: 0 28px 0 0;
+}
+#header .cart .alignleft img{
+	display: block;
+	width: 100%;
+	height: auto;
+}
+#header .cart .text-area{
+	overflow: hidden;
+	position: relative;
+}
+#header .cart h2{
+	margin: 0 0 10px;
+	text-transform: uppercase;
+	color: #222;
+	font:19px/22px "Roboto Condensed", Helvetica, Arial, sans-serif;
+}
+#header .cart .price{
+	color: #fdda00;
+	font:25px/30px "Roboto Condensed", Helvetica, Arial, sans-serif;
+}
+#header .cart .cancel{
+	color: #ddd;
+	position: absolute;
+	top: 0;
+	right: 0;
+	font-size: 20px;
+}
+#header .cart .cancel:hover{
+	text-decoration: none;
+	color: #222;
+}
+#header .cart .edit{
+	color: #ddd;
+	position: absolute;
+	top: 28px;
+	right: 0;
+	font-size: 16px;
+}
+#header .cart .edit:hover{
+	color: #222;
+}
+#header .cart .total{
+	display: block;
+	padding: 28px 20px 28px;
+	color: #000;
+	font:bold 33px/35px "Roboto Condensed", Helvetica, Arial, sans-serif;
+}
+#header .cart .btn-holder{
+	overflow: hidden;
+	text-align: center;
+}
+#header .cart .btn-holder a{
+	display: inline-block;
+	vertical-align: top;
+	width: 42%;
+	padding: 10px;
+	border: 4px solid #000;
+	background: #000;
+	text-transform: uppercase;
+	color: #fff;
+	position: relative;
+	font:bold 12px/16px Arial, Helvetica, sans-serif;
+}
+#header .cart .btn-holder a:before{
+	position: absolute;
+	top: -4px;
+	left: -24px;
+	width: 0;
+	height: 0;
+	border-style: solid;
+	border-width: 0 0 44px 20px;
+	border-color: transparent transparent #000;
+	content: '';
+}
+#header .cart .btn-holder a:first-child:before{display: none;}
+#header .cart .btn-holder a:hover{
+	opacity: 0.8;
+	text-decoration: none;
+}
+#header .cart .btn-holder a:first-child{
+	margin: 0 14px 0 0;
+	color: #aaa;
+	background: #fff;
+	border-width: 0 0 0 4px;
+	border-style: solid;
+	border-color: #eee;
+	overflow: hidden;
+	padding: 0;
+	width: 45%;
+}
+#header .cart .btn-holder a:first-child .span1{
+	transform: skewX(-25deg);
+	border: 4px solid #eee;
+	padding: 10px;
+	display: block;
+	width: 100%;
+	margin-left: -12px;
+}
+#header .cart .btn-holder a:first-child .span2{
+	display: inline-block;
+    transform: skewX(25deg);
+}
+#header .cart .btn-holder a:first-child .span1:hover{background: #eee;}
+#header .cart .btn-holder a:first-child:hover{
+	background: none;
+	color: #000;
+	opacity: 1;
 }
 #header .bottom-area{
 	text-align: right;
@@ -862,8 +1022,123 @@ p.style1 {
 	content: '';
 }
 #footer .list a{color: #000;}
-
-
+#footer .bottom-area{
+	position: relative;
+	color: #fff;
+}
+#footer .bottom-area:before{
+	background: #000;
+	display: block;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	margin: 0 -9999px;
+	padding: 0 9999px;
+	content: '';
+}
+#footer .copyright{
+	position: relative;
+	z-index: 22;
+	display: block;
+	padding-top: 11px;
+	padding-bottom: 11px;
+	font: 15px/20px "Roboto Condensed",Helvetica,Arial,sans-serif;
+}
+#footer .copyright a{color: #fff;}
+#footer .footer-nav{overflow: hidden;}
+#footer .footer-nav ul{
+	margin: 0;
+	padding: 10px 0;
+	list-style: none;
+	letter-spacing: -4px;
+	text-align: right;
+	text-transform: capitalize;
+	font: 14px/20px "Roboto Condensed",Helvetica,Arial,sans-serif;
+}
+#footer .footer-nav li{
+	display: inline-block;
+	vertical-align: middle;
+	margin: 0 0 0 20px;
+	position: relative;
+	letter-spacing: normal;
+}
+#footer .footer-nav li:first-child:before{display: none;}
+#footer .footer-nav li:before{
+	position: absolute;
+	top: 9px;
+	left: -12px;
+	width: 3px;
+	height: 3px;
+	border-radius: 50%;
+	background: #fff;
+	content: '';
+}
+#footer .footer-nav a{color: #fff;}
+#footer .social ul{
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	text-align: right;
+	letter-spacing: -4px;
+}
+#footer .social li{
+	display: inline-block;
+	vertical-align: middle;
+	letter-spacing: normal;
+}
+#footer .social a{
+	color: #fff;
+	width: 42px;
+	display: block;
+	text-align: center;
+	font-size: 18px;
+	line-height: 20px;
+	padding: 11px 0;
+}
+#footer .social a:hover{
+	background: #fdda00;
+	text-decoration: none;
+}
+#header.small-header .right-area {
+	display: none;e9e9e9
+}
+#header.small-header .col{
+	margin: 0 auto;
+	max-width: 1200px;
+	width: 100%;
+	float: none;
+	overflow: hidden;
+	padding: 0 30px;
+	transform: skewX(28deg);
+	-moz-transform: skewX(28deg);
+	-ms-transform: skewX(28deg);
+	-webkit-transform: skewX(28deg);
+}
+#header.small-header {
+	position: fixed !important;
+	top: 0;
+	left: 14px;
+	right: 14px;
+	background: #fff;
+	overflow: hidden;
+	box-shadow: 0 1px 9px rgba(0,0,0,.1);
+	margin: 0;
+	padding: 0;
+	transform: skewX(-28deg);
+	-moz-transform: skewX(-28deg);
+	-ms-transform: skewX(-28deg);
+	-webkit-transform: skewX(-28deg);
+}
+.small-header .logo {
+	width: 56px;
+	margin: 7px 0;
+	padding: 0;
+	float: left;
+}
+.small-header #nav{
+	float: right;
+	width: 50%;
+}
 
 
 
@@ -888,10 +1163,41 @@ p.style1 {
     margin-top: 20px;
 }
 .dark-box .box{height: 280px;}
+#footer .copyright{
+	padding-bottom: 7px;
+    padding-top: 7px;
+    font-size: 12px;
+}
+#footer .footer-nav ul{
+	padding: 6px 0;
+	font-size: 12px;
+}
+#footer .footer-nav li{margin: 0 0 0 18px;}
+#footer .social a{
+	padding: 7px 0;
+	width: 34px;
+}
+#header.small-header .col{max-width: 992px;}
+.small-header .logo{margin: 6px 0;}
+#header.small-header{
+	right: 0;
+	left: 0;
+	transform: skewX(0deg);
+	-moz-transform: skewX(0deg);
+	-ms-transform: skewX(0deg);
+	-webkit-transform: skewX(0deg);
+}
+#header.small-header .col{
+	max-width: 992px;
+	transform: skewX(0deg);
+	-moz-transform: skewX(0deg);
+	-ms-transform: skewX(0deg);
+	-webkit-transform: skewX(0deg);
+}
 }
 @media only screen and (max-width: 991px){
 .logo {
-    margin: 20px 0;
+    margin: 20px 0 35px;
     width: 150px;
 }
 #header .cart a{
@@ -934,5 +1240,47 @@ p.style1 {
 #footer .list{font-size: 14px;}
 #footer .list li{padding-bottom: 5px;}
 #footer .column h3{font-size: 22px;}
-
+#footer .copyright {
+    text-align: center;
 }
+#footer .footer-nav ul{text-align: center;}
+#footer .social ul{text-align: center;}
+.small-header .logo {
+    margin: 2px 0;
+    width: 38px;
+}
+#header.small-header .col{
+	width: 768px;
+}
+}
+@media only screen and (max-width: 767px){
+body{min-width: 768px;}
+#wrapper > .container {
+    margin-bottom: 0;
+    margin-top: 0;
+}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
