--- a/app/design/frontend/creo/default/template/catalog/product/list/related.phtml
+++ b/app/design/frontend/creo/default/template/catalog/product/list/related.phtml
@@ -26,7 +26,7 @@
 ?>
 
 <?php if($this->getItems()->getSize()): ?>
-<div class="row">
+<div class="row relatedProductsHeading">
 <div class="col-md-12">
 <div class="heading-holder">
 <h2><?php echo $this->__('Related Products') ?></h2>
@@ -34,7 +34,7 @@
 </div>
 </div>
 
-<div class="row">
+<div class="row relatedProductsList">
 <div class="carousel4-area col col-lg-12 col-md-12 col-sm-12 col-xs-12">
 <div class="carousel-creo carousel4">
 <div class="mask">
