--- a/app/design/frontend/creo/default/template/catalog/navigation/left.phtml
+++ b/app/design/frontend/creo/default/template/catalog/navigation/left.phtml
@@ -30,6 +30,7 @@
  * @see Mage_Catalog_Block_Navigation
  */
 ?>
+dsfsdfsd
 <?php if (!Mage::registry('current_category')) return ?>
 <?php $_categories = $this->getCurrentChildCategories() ?>
 <?php $_count = is_array($_categories)?count($_categories):$_categories->count(); ?>
