--- a/app/design/frontend/creo/default/template/customer/account/dashboard/address.phtml
+++ b/app/design/frontend/creo/default/template/customer/account/dashboard/address.phtml
@@ -24,9 +24,27 @@
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
-<div class="box-account box-info">
+
+	<div class="column large">
+											<h4><?php echo $this->__('ADDRESS BOOK') ?></h4>
+											<div class="column-content">
+												<div class="address-area">
+													<span class="address-title"><?php echo $this->__('Default Billing Address') ?></span>
+													<span class="address"><?php echo $this->getPrimaryBillingAddressHtml() ?></span>
+													<a class="edit" href="<?php echo $this->getPrimaryBillingAddressEditUrl() ?>">Edit Address</a>
+												</div>
+												<div class="address-area">
+													<span class="address-title"><?php echo $this->__('Default Shipping Address') ?></span>
+													<span class="address"><?php echo $this->getPrimaryShippingAddressHtml() ?></span>
+													<a class="edit" href="<?php echo $this->getPrimaryShippingAddressEditUrl() ?>">Edit Address</a>
+												</div>
+												<a href="<?php echo $this->getAddressBookUrl() ?>" class="edit-icon"><i class="icon-pencil"></i></a>
+											</div>
+										</div>
+
+<?php /*?><div class="box-account box-info">
     <div class="box-head">
-        <h2><?php echo $this->__('Address Book') ?></h2>
+        <h2><?php echo $this->__('ADDRESS BOOK') ?></h2>
         <a href="<?php echo $this->getAddressBookUrl() ?>"><?php echo $this->__('Manage Addresses') ?></a>
     </div>
     <div class="col2-set">
@@ -53,4 +71,4 @@
             </div>
         </div>
     </div>
-</div>
+</div><?php */?>
