--- a/app/design/frontend/creo/default/template/page/filters.phtml
+++ b/app/design/frontend/creo/default/template/page/filters.phtml
@@ -51,7 +51,7 @@
              <div class="main">
                 <?php echo $this->getChildHtml('breadcrumbs') ?>
                 <?php if ($_leftContent = $this->getChildHtml('left_first')): ?>
-                <div class="col-left sidebar col-left-first"><?php echo $_leftContent;   ?></div>
+                <div class="category_top_filters"><?php echo $_leftContent;   ?></div>
                 <?php endif; ?>
                 <div class="col-main">
                     <?php echo $this->getChildHtml('global_messages') ?>
