--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -124,6 +124,7 @@ p { margin: 0 0 1.2em; }
 .icon-angle-right:before { content: '\e810'; } /* '' */
 .icon-sort-alt-up:before { content: '\e811'; } /* '' */
 .icon-down-open:before { content: '\e812'; } /* '' */
+.icon-pencil:before { content: '\e813'; } /* '' */
 .nav li,
 form li {
 	float: left;
@@ -2333,7 +2334,7 @@ input.email {
 	border-color: #515151;
 	padding: 20px 0 20px 2px;
 }
-.tabset{
+.tabset.tabset1{
 	overflow: hidden;
 	margin: 25px 0 22px -4px;
 	padding: 0;
@@ -2341,11 +2342,11 @@ input.email {
 	text-transform: uppercase;
 	font: 18px/20px "Roboto Condensed", Helvetica, Arial, sans-serif;
 }
-.tabset li{
+.tabset.tabset1 li{
 	float: left;
 	margin: 0 3px 0 0;
 }
-.tabset a{
+.tabset.tabset1 a{
 	display: block;
 	min-width: 30px;
 	padding: 6px 15px;
@@ -2356,26 +2357,26 @@ input.email {
 	-ms-transform: skewX(-15deg);
 	-webkit-transform: skewX(-15deg);
 }
-.tabset a span{
+.tabset.tabset1 a span{
 	display: block;
 	transform: skewX(15deg);
 	-moz-transform: skewX(15deg);
 	-ms-transform: skewX(15deg);
 	-webkit-transform: skewX(15deg);
 }
-.tabset li.active a,
-.tabset a:hover{
+.tabset.tabset1 li.active a,
+.tabset.tabset1 a:hover{
 	color: #fff;
 	background: #000;
 	text-decoration: none;
 }
-.tab-content{
+.tab-content1{
 	overflow: hidden;
 	min-height: 99px;
 	color: #888;
 	font: 15px/25px "Roboto Condensed", Helvetica, Arial, sans-serif;
 }
-.tab-content p{margin: 0 0 10px;}
+.tab-content1 p{margin: 0 0 10px;}
 .shipping-area{
 	overflow: hidden;
 	border-width: 2px 0;
@@ -2866,6 +2867,329 @@ input.email {
 	opacity: 1;
 	border-color: #f16167;
 }
+.tab-links{
+	overflow: hidden;
+	border-bottom: 4px solid #eee;
+	padding: 10px 0 5px;
+}
+.tab-links .user-name{
+	float: left;
+	padding: 0 10px;
+	text-transform: uppercase;
+	color: #222;
+	font:12px/19px "Roboto Condensed", Helvetica, Arial, sans-serif;
+}
+.tab-links .user-name a{color: #222;}
+.tabset.tabset2{
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	text-transform: uppercase;
+	font:12px/17px "Roboto Condensed", Helvetica, Arial, sans-serif;
+}
+.tabset.tabset2 li{
+	float: left;
+	margin: 0 4px 0 0;
+}
+.tabset.tabset2 a{
+	display: block;
+	padding: 0 5px;
+	text-align: center;
+	border: 1px solid #c5c5c5;
+	color: #222;
+	min-width: 90px;
+	transform: skewX(-25deg);
+	-moz-transform: skewX(-25deg);
+	-ms-transform: skewX(-25deg);
+	-webkit-transform: skewX(-25deg);
+}
+.tabset.tabset2 a span{
+	display: block;
+	transform: skewX(25deg);
+	-moz-transform: skewX(25deg);
+	-ms-transform: skewX(25deg);
+	-webkit-transform: skewX(25deg);
+}
+.tabset.tabset2 li.active a,
+.tabset.tabset2 a:hover{
+	text-decoration: none;
+	border-color: #f16167;
+	background: #f16167;
+}
+.tab-content2{
+	color: #251709;
+	font:12px/14px "Roboto Condensed", Helvetica, Arial, sans-serif;
+}
+.tab-content2 h2{
+	margin: 0 0 20px;
+	padding: 20px 10px 8px;
+	text-transform: uppercase;
+	border-bottom: 2px solid #eee;
+	color: #000;
+	font:17px/22px "Roboto Condensed", Helvetica, Arial, sans-serif;
+}
+.tab-content2 .product-area{overflow: hidden;}
+.tab-content2 .alignleft{
+	float: left;
+	width: 54px;
+	height: auto;
+	margin: 25px 28px 0 12px;
+}
+.tab-content2 .product-details{
+	overflow: hidden;
+	margin: 0 0 10px;
+	border-width: 0 1px 2px;
+	border-style: solid;
+	border-color: #d7d7d7 #eee;
+}
+.tab-content2 h3{
+	margin: 0 0 4px;
+	border-width: 2px 1px;
+	border-style: solid;
+	border-color: #d7d7d7;
+	text-transform: uppercase;
+	color: #251709;
+	text-align: center;
+	font:bold 12px/18px "Roboto Condensed", Helvetica, Arial, sans-serif;
+}
+.tab-content2 .title{
+	display: block;
+	margin: 0 0 15px;
+	padding: 0 18px;
+	color: #000;
+	font:12px/18px "Roboto Condensed", Helvetica, Arial, sans-serif;
+}
+.tab-content2 .title a{color: #000;}
+.tab-content2 .options-area{padding: 0 18px 15px;}
+.tab-content2 h4{
+	margin: 0 0 5px;
+	text-transform: uppercase;
+	color: #222;
+	font:bold 10px/18px "Roboto Condensed", Helvetica, Arial, sans-serif;
+}
+.tab-content2 .cart-area{
+	float: right;
+	width: 312px;
+	margin: 0 0 0 16px;
+	border-width: 0 1px 2px;
+	border-style: solid;
+	border-color: #d7d7d7 #eee;
+}
+.tab-content2 .bottom-area{
+	text-align: center;
+	padding: 0 0 15px;
+}
+.tab-content2 .qty-area{
+	display: inline-block;
+	vertical-align: top;
+}
+.tab-content2 .btn-cart{
+	display: inline-block;
+	vertical-align: top;
+	border: 1px solid #8c8764;
+	padding: 0 6px;
+	margin: 0 0 0 5px;
+	background: #f16167;
+	color: #000;
+	font:bold 10px/21px "Roboto Condensed", Helvetica, Arial, sans-serif;
+}
+.tab-content2 .btn-cart:hover{
+	text-decoration: none;
+	opacity: 0.9;
+}
+.tab-content2 .cart-area .price{
+	display: block;
+	margin: 18px 0;
+	text-align: center;
+	color: #000;
+	font:bold 15px/20px "Roboto Condensed", Helvetica, Arial, sans-serif;
+}
+.tab-content2 .btn-holder {
+	overflow: hidden;
+	text-align: right;
+	margin: 6px 0;
+}
+.tab-content2 .btn-holder a {
+	display: inline-block;
+	vertical-align: top;
+	padding: 6px;
+	border: 2px solid #000;
+	background: #000;
+	text-transform: uppercase;
+	text-align: center;
+	color: #fff;
+	position: relative;
+	font:bold 12px/16px Arial, Helvetica, sans-serif;
+	white-space: nowrap;
+	min-width: 152px;
+}
+.tab-content2 .btn-holder a:before {
+	position: absolute;
+	top: -4px;
+	left: -22px;
+	width: 0;
+	height: 0;
+	border-style: solid;
+	border-width: 0 0 42px 20px;
+	border-color: transparent transparent #000;
+	content: '';
+}
+.tab-content2 .btn-holder a:first-child:before { display: none; }
+.tab-content2 .btn-holder a:hover:before { border-color: transparent transparent #f16167; }
+.tab-content2 .btn-holder a:hover {
+	opacity: 0.8;
+	background: #f16167;
+	color: #000;
+	border-color: #f16167;
+	text-decoration: none;
+}
+.tab-content2 .btn-holder a:first-child {
+	margin: 0 2px 0 0;
+	color: #251709;
+	background: #fff;
+	border-width: 0 0 0 2px;
+	border-style: solid;
+	border-color: #959595;
+	overflow: hidden;
+	padding: 0;
+}
+.tab-content2 .btn-holder a:first-child .span1 {
+	transform: skewX(-25deg);
+	-moz-transform: skewX(-25deg);
+	-ms-transform: skewX(-25deg);
+	-webkit-transform: skewX(-25deg);
+	border: 2px solid #959595;
+	padding: 6px;
+	display: block;
+	width: 100%;
+	margin-left: -12px;
+}
+.tab-content2 .btn-holder a:first-child .span2 {
+	display: inline-block;
+	transform: skewX(25deg);
+	-moz-transform: skewX(25deg);
+	-webkit-transform: skewX(25deg);
+	-ms-transform: skewX(25deg);
+	padding: 0 15px;
+}
+.tab-content2 .btn-holder a:first-child:hover .span1 {
+	background: #f16167;
+	border-color: #f16167;
+}
+.tab-content2 .btn-holder a:first-child:hover {
+	background: none;
+	color: #000;
+	opacity: 1;
+	border-color: #f16167;
+}
+.tab-content2 .welcome-msg{
+	overflow: hidden;
+	border: 2px solid #d7d7d7;
+	padding: 10px 13px;
+	margin: 0 0 40px;
+	color: #000;
+	font:12px/16px "Roboto Condensed", Helvetica, Arial, sans-serif;
+}
+.tab-content2 .welcome-msg h3{
+	margin: 0 0 10px;
+	border: none;
+	text-align: left;
+	text-transform: uppercase;
+	color: #251709;
+	font:bold 12px/16px "Roboto Condensed", Helvetica, Arial, sans-serif;
+}
+.tab-content2 .welcome-msg p{margin: 0;}
+.tab-content2 .dark-heading{
+	margin: 0 0 20px;
+	border-width: 0 0 2px;
+	border-style: solid;
+	border-color: #aeaeae;
+	text-align: left;
+	text-transform: uppercase;
+	color: #fff;
+	font:bold 12px/20px "Roboto Condensed", Helvetica, Arial, sans-serif;
+}
+.tab-content2 .dark-heading span{
+	display: inline-block;
+	vertical-align: bottom;
+	background: #251709;
+	padding: 0 15px;
+	position: relative;
+}
+.tab-content2 .dark-heading span:before{
+	width: 0;
+	height: 0;
+	border-style: solid;
+	border-width: 20px 0 0 6px;
+	border-color: transparent transparent transparent #251709;
+	position: absolute;
+	top: 0;
+	left: 100%;
+	content: '';
+}
+.tab-content2 .column-holder{overflow: hidden;}
+.tab-content2 .column-holder .column{
+	float: left;
+	width: 28%;
+	margin: 0 2% 0 0;
+	border-bottom: 2px solid #e2e2e2;
+	position: relative;
+	color: #000;
+	font:12px/18px "Roboto Condensed", Helvetica, Arial, sans-serif;
+}
+.tab-content2 .column-holder .column.large{
+	float: right;
+	margin: 0;
+	width: 40%;
+}
+.tab-content2 .column-holder .column h4{
+	margin: 0;
+	border-bottom: 2px solid #d7d7d7;
+	text-transform: uppercase;
+	color: #251709;
+	font:bold 12px/18px "Roboto Condensed", Helvetica, Arial, sans-serif;
+}
+.tab-content2 .column-content{
+	overflow: hidden;
+	padding: 12px 16px;
+	min-height: 96px;
+}
+.tab-content2 .column-content .author{
+	display: block;
+	text-transform: uppercase;
+	color: #000;
+}
+.tab-content2 .column-content .email{
+	display: block;
+	text-transform: lowercase;
+	color: #000;
+}
+.tab-content2 .column-content .edit{
+	color: #696969;
+}
+.tab-content2 .column-content .edit-icon{
+	position: absolute;
+	top: 0;
+	right: 0;
+	font-size: 12px;
+	color: #6d6e71;
+	opacity: 0.9;
+}
+.tab-content2 .column-content .edit-icon:hover{
+	text-decoration: none;
+	opacity: 1;
+}
+.tab-content2 .column-content .address-area{
+	float: left;
+	width: 45%;
+	margin: 0 5% 0 0;
+}
+.tab-content2 .column-content .address-title,
+.tab-content2 .column-content .address{
+	display: block;
+}
+.tab-content2 .column-content p{margin: 0 0 5px;}
+.tab-content2 p{margin: 0 0 10px;}
 
 
 
@@ -2973,6 +3297,8 @@ input.email {
 	}
 	.tabset{font-size: 15px;}
 	.cart-table-area td:first-child {padding-left: 20px;}
+	.tab-content2 .options-area .column{width: 37%;}
+	.tab-content2 .column-content{padding: 8px 10px;}
 }
 @media only screen and (max-width: 767px) {
 	body { min-width: 768px; }
