--- a/app/design/frontend/creo/default/layout/catalog.xml
+++ b/app/design/frontend/creo/default/layout/catalog.xml
@@ -202,7 +202,7 @@ Product view
             <action method="addItem"><type>js</type><name>calendar/calendar-setup.js</name><!--<params/><if/><condition>can_load_calendar_js</condition>--></action>
         </reference>
         <reference name="content">
-            <block type="catalog/product_view" name="product.info" template="catalog/product/view.phtml">
+            <block type="catalog/product_view" name="product.info" template="catalog/product/view1.phtml">
                 <!--
                 <action method="addReviewSummaryTemplate"><type>default</type><template>review/helper/summary.phtml</template></action>
                 <action method="addReviewSummaryTemplate"><type>short</type><template>review/helper/summary_short.phtml</template></action>
