--- a/app/design/frontend/creo/default/template/page/html/header.phtml
+++ b/app/design/frontend/creo/default/template/page/html/header.phtml
@@ -26,7 +26,30 @@
 /**
  * @var Mage_Page_Block_Html_Header $this
  */
+$js_pdp = Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_JS).'pdp/';
 ?>
+<link href="<?php echo $js_pdp;?>bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet"/>
+<link href="<?php echo $js_pdp;?>bootstrap/3.3.4/css/bootstrap-theme.min.css" rel="stylesheet"/>
+<link href="<?php echo $js_pdp;?>jquery/nouislider/7.1.0/jquery.nouislider.css" rel="stylesheet"/>
+<link href="<?php echo $js_pdp;?>jquery/nouislider/7.1.0/jquery.nouislider.pips.min.css" rel="stylesheet"/>
+<link href="<?php echo $js_pdp;?>jquery/mcustomscrollbar/jquery.mcustomscrollbar.css" rel="stylesheet"/>
+<link href="<?php echo $js_pdp;?>material-icons/style.css" rel="stylesheet"/>
+<link href="<?php echo $js_pdp;?>pace/dataurl.css" rel="stylesheet"/>
+<link href="<?php echo $js_pdp;?>jquery/jcrop/jquery.jcrop.min.css" rel="stylesheet"/>
+<link href="<?php echo $js_pdp;?>pdc/css/pdc.css" rel="stylesheet"/>
+<link href="<?php echo $js_pdp;?>pdc/css/iframe.css" rel="stylesheet"/>
+<link href="<?php echo $js_pdp;?>pdc/css/pdc.layer.css" rel="stylesheet"/>
+<link href="<?php echo $js_pdp;?>jquery/colorpicker/css/colorpicker.css" rel="stylesheet"/>
+<script src="<?php echo $js_pdp;?>jquery/jquery-1.10.2.min.js"></script>
+<script src="<?php echo $js_pdp;?>bootstrap/3.3.4/js/bootstrap.min.js"></script>
+<script src="<?php echo $js_pdp;?>pace/pace.min.js"></script>
+<script src="<?php echo $js_pdp;?>jquery/nouislider/7.1.0/jquery.nouislider.all.min.js"></script>
+<script src="<?php echo $js_pdp;?>jquery/mcustomscrollbar/jquery.mcustomscrollbar.min.js"></script>
+<script src="<?php echo $js_pdp;?>jquery/jcrop/jquery.jcrop.min.js"></script>
+<script src="<?php echo $js_pdp;?>pdc/js/draggabilly.js"></script>
+<script src="<?php echo $js_pdp;?>jquery/ui/jquery-ui.min.js"></script>
+<script src="<?php echo $js_pdp;?>jquery/colorpicker/colorpicker.js"></script>
+<script src="<?php echo $js_pdp;?>fabricjs/fabric-1.5.0.min.js"></script>
 
 	    <header id="header" class="row">
 			        <div class="col col-static col-lg-6 col-md-6 col-sm-6 col-xs-6">
