--- a/app/design/frontend/creo/default/layout/wishlist.xml
+++ b/app/design/frontend/creo/default/layout/wishlist.xml
@@ -101,11 +101,11 @@ Wishlist pages
                     </block>
                     <block type="wishlist/customer_wishlist_item_column_remove" name="customer.wishlist.item.remove" template="wishlist/item/column/remove.phtml" />
                 </block>
-                <block type="core/text_list" name="customer.wishlist.buttons" as="control_buttons">
+                <!--<block type="core/text_list" name="customer.wishlist.buttons" as="control_buttons">
                     <block type="wishlist/customer_wishlist_button" name="customer.wishlist.button.share" template="wishlist/button/share.phtml" />
                     <block type="wishlist/customer_wishlist_button" name="customer.wishlist.button.toCart" template="wishlist/button/tocart.phtml" />
                     <block type="wishlist/customer_wishlist_button" name="customer.wishlist.button.update" template="wishlist/button/update.phtml" />
-                </block>
+                </block> -->
             </block>
         </reference>
         <reference name="right">
