--- a/app/design/frontend/creo/default/template/catalog/navigation/left_nav.phtml
+++ b/app/design/frontend/creo/default/template/catalog/navigation/left_nav.phtml
@@ -4,7 +4,7 @@ $store_cats = $obj->getStoreCategories();
 $current_cat    = $obj->getCurrentCategory();
 $current_cat    = (is_object($current_cat) ? $current_cat->getName() : '');*/
 
-
+$_helper= Mage::helper('catalog/category');
 $_category = Mage::registry('current_category');
 $path = $_category->getPath(); //get the path of where you are
 $ids = explode('/', $path);
@@ -17,13 +17,14 @@ $subcategories = Mage::getModel('catalog/category')->getCategories($ids[2]);
 
 foreach ($subcategories as $cat) {
     if ($cat->getName() == $current_cat) {
-        echo '<li class="current"><a href="'.$this->getCategoryUrl($cat).'">'.$cat->getName()."</a>\n<ul>\n";
+
+        echo '<li class="current"><a href="'.$_helper->getCategoryUrl($cat).'">'.$cat->getName()."</a>\n<ul>\n";
         /*foreach ($obj->getCurrentChildCategories() as $subcat) {
             echo '<li><a href="'.$this->getCategoryUrl($subcat).'">'.$subcat->getName()."</a></li>\n";
         }*/
         echo "</ul>\n</li>\n";
     } else {
-        echo '<li><a href="'.$this->getCategoryUrl($cat).'">'.$cat->getName()."</a></li>\n";
+        echo '<li><a href="'.$_helper->getCategoryUrl($cat).'">'.$cat->getName()."</a></li>\n";
     }
 }
 ?>
