--- a/app/design/frontend/creo/default/template/catalog/product/view/addto.phtml
+++ b/app/design/frontend/creo/default/template/catalog/product/view/addto.phtml
@@ -25,7 +25,7 @@
  */
 ?>
 
-<?php $_product = $this->getProduct(); ?>
+<?php /*?><?php $_product = $this->getProduct(); ?>
 <?php $_wishlistSubmitUrl = $this->helper('wishlist')->getAddUrl($_product); ?>
 
 <ul class="add-to-links">
@@ -40,4 +40,4 @@
 <?php endif; ?>
 
 </ul>
-
+<?php */?>
