--- a/app/design/frontend/creo/default/template/catalog/product/view/type/options/configurable.phtml
+++ b/app/design/frontend/creo/default/template/catalog/product/view/type/options/configurable.phtml
@@ -64,7 +64,7 @@ $_renderers = $this->getChild('attr_renderers')->getSortedChildren();
 </dd>
 <?php endif; ?>
 <?php endforeach; ?>
-<div class="column color-area qty-area ">
+<?php /*?><div class="column color-area qty-area ">
   <?php $_product = $this->getProduct(); ?>
   <?php if($_product->isSaleable()): ?>
   <?php if(!$_product->isGrouped()): ?>
@@ -74,7 +74,7 @@ $_renderers = $this->getChild('attr_renderers')->getSortedChildren();
   <span class="down">down</span>  
   <?php endif; ?>
   <?php endif; ?>
-</div>
+</div><?php */?>
 
 
 <script type="text/javascript">
