--- a/app/design/frontend/creo/default/template/magpassion_quickview/quickview/catalog/product/view.phtml
+++ b/app/design/frontend/creo/default/template/magpassion_quickview/quickview/catalog/product/view.phtml
@@ -63,13 +63,13 @@
       <?php endif;?>
       </div>
       <span class="price"><?php echo Mage::helper('core')->currency($_product->getFinalPrice(),true,false); ?></span>
-        <div class="btn-holder"> 
+     <?php /*?>   <div class="btn-holder"> 
   
 		<button type="button" title="<?php echo $buttonTitle ?>" class="button btn-cart" onclick="productAddToCartForm.submit(this)">
 		<span class="span1"><span class="span2"><?php echo $buttonTitle ?> Add To Cart</span></span>
       </button>
       <a class="link-wishlist" href="<?php echo $this->getUrl('wishlist') ?>"><i class="icon-heart-empty"></i></a> 
-      </div>
+      </div><?php */?>
     </div>
   </div>
  </form> 
