--- a/app/design/frontend/creo/default/template/catalog/product/view/addtocart.phtml
+++ b/app/design/frontend/creo/default/template/catalog/product/view/addtocart.phtml
@@ -25,18 +25,36 @@
  */
 ?>
 <?php $_product = $this->getProduct(); ?>
-<?php $buttonTitle = $this->__('Add to Cart'); ?>
+<?php $buttonTitle = $this->__(' Add to Cart'); ?>
 <?php if($_product->isSaleable()): ?>
     <div class="add-to-cart">
         <?php if(!$_product->isGrouped()): ?>
-        <div class="qty-wrapper">
+        <div class="column color-area qty-area ">
+  <?php $_product = $this->getProduct(); ?>
+  <?php if($_product->isSaleable()): ?>
+  <?php if(!$_product->isGrouped()): ?>
+  <label for="qty"><?php echo $this->__('Quantity:') ?></label>
+  <span class="up">up</span>   
+  <input type="text" pattern="\d*" name="qty" id="qty" maxlength="12" value="<?php echo max($this->getProductDefaultQty() * 1, 1) ?>" title="<?php echo $this->__('Qty') ?>" class="input-text qty" />
+  <span class="down">down</span>  
+  <?php endif; ?>
+  <?php endif; ?>
+</div>
+       <?php /*?> <div class="qty-wrapper">
             <label for="qty"><?php echo $this->__('Qty:') ?></label>
             <input type="text" pattern="\d*" name="qty" id="qty" maxlength="12" value="<?php echo max($this->getProductDefaultQty() * 1, 1) ?>" title="<?php echo $this->__('Qty') ?>" class="input-text qty" />
-        </div>
+        </div><?php */?>
         <?php endif; ?>
-        <div class="add-to-cart-buttons">
-            <button type="button" title="<?php echo $buttonTitle ?>" class="button btn-cart" onclick="productAddToCartForm.submit(this)"><span><span><?php echo $buttonTitle ?></span></span></button>
-            <?php echo $this->getChildHtml('', true, true) ?>
+        <div class="add-to-cart-buttons btn-holder">
+            <button type="button" title="<?php echo $buttonTitle ?>" class="button btn-cart" onclick="productAddToCartForm.submit(this)"><span class="span1"><span class="span2"><?php echo $buttonTitle ?></span></span></button>
+            
+            <?php $_wishlistSubmitUrl = $this->helper('wishlist')->getAddUrl($_product); ?>
+		<?php if ($this->helper('wishlist')->isAllow()) : ?>
+      <a href="<?php echo $_wishlistSubmitUrl ?>" onclick="productAddToCartForm.submitLight(this, this.href); return false;" class="link-wishlist"> <i class="icon-heart-empty"></i> <?php //echo $this->__('Add to Wishlist') ?></a>
+      <?php /*?><a class="link-wishlist" href="#"><i class="icon-heart-empty"></i></a><?php */?>
+		<?php endif; ?>
+            
+				<?php echo $this->getChildHtml('', true, true) ?>
         </div>
     </div>
 <?php endif; ?>
